Fixes to make QE launch when asked

--- a/qe_dome.ipynb
+++ b/qe_dome.ipynb
@@ -113,6 +113,7 @@
     "# Create the application steps\n",
     "viewer = OptimadeInterceptor()\n",
     "configure_qe_app_work_chain_step = ConfigureQeAppWorkChainStep(auto_advance=True)\n",
+    "configure_qe_app_work_chain_step.input_structure = viewer.aiida_structure\n",
     "submit_qe_app_work_chain_step = SubmitQeAppWorkChainStep(auto_advance=True)\n",
     "submit_qe_app_work_chain_step.input_structure = viewer.aiida_structure\n",
     "view_qe_app_work_chain_status_and_results_step = ViewQeAppWorkChainStatusAndResultsStep()\n",
@@ -122,8 +123,13 @@
     "ipw.dlink((configure_qe_app_work_chain_step, 'state'), (submit_qe_app_work_chain_step, 'previous_step_state'))\n",
     "ipw.dlink((configure_qe_app_work_chain_step, 'configuration_parameters'),\n",
     "          (submit_qe_app_work_chain_step, 'input_parameters'))\n",
+    "ipw.dlink(\n",
+    "    (submit_qe_app_work_chain_step, \"process\"),\n",
+    "    (view_qe_app_work_chain_status_and_results_step, \"process\"),\n",
+    "    transform=lambda node: node.uuid if node is not None else None,\n",
+    ")\n",
     "\n",
-    "ipw.dlink((submit_qe_app_work_chain_step, 'process'), (view_qe_app_work_chain_status_and_results_step, 'process'))\n",
+    "# ipw.dlink((submit_qe_app_work_chain_step, 'process'), (view_qe_app_work_chain_status_and_results_step, 'process'))\n",
     "\n",
     "# Add the application steps to the application\n",
     "app = WizardAppWidget(\n",
@@ -144,6 +150,8 @@
     "    if pk is None:\n",
     "        app.reset()\n",
     "        app.selected_index = 0\n",
+    "    else:\n",
+    "        app.selected_index = 2\n",
     "\n",
     "\n",
     "work_chain_selector.observe(_observe_process_selection, 'value')\n",
